<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterTransportActivity">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DangKyGuiHang"
        android:textAllCaps="true"
        android:textColor="#5468CC"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/style_edit_text"
        android:backgroundTint="@color/white"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
        app:suffixText="KG">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtWeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/CanNang"
            android:inputType="numberDecimal"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

        <EditText
            android:id="@+id/txtReceiverName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/HoTenNguoiNhan"
            android:inputType="textPersonName"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/textInputLayout2"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="340dp"-->
<!--        android:layout_height="80dp"-->
<!--        android:layout_marginTop="12dp"-->
<!--        app:boxCornerRadiusBottomEnd="12dp"-->
<!--        app:boxCornerRadiusBottomStart="12dp"-->
<!--        app:boxCornerRadiusTopEnd="12dp"-->
<!--        app:boxCornerRadiusTopStart="12dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.507"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textInputLayout16">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/txtDescription"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:hint="@string/MoTaHangHoa"-->
<!--            android:inputType="textPersonName"-->
<!--            android:maxLines="3"-->
<!--            android:textAlignment="viewStart"-->
<!--            android:textSize="14sp"-->
<!--            tools:layout_editor_absoluteX="35dp"-->
<!--            tools:layout_editor_absoluteY="478dp" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNumberPhoneReceiver"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/SoDienThoaiNguoiNhan"
            android:inputType="phone"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAddressReceiver"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/DiaChiNguoiNhan"
            android:inputType="textPostalAddress"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtVTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/ThanhToan"
        android:textColor="@color/main_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cBxCOD">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtThanhToan"
        android:layout_width="110dp"
        android:layout_height="27dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="24dp"
        android:text="200000000"
        android:textAlignment="textEnd"
        android:textColor="@color/main_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtVND"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cBxCOD">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtVND"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="68dp"
        android:text="@string/vnd"
        android:textColor="@color/main_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cBxCOD">

    </com.google.android.material.textview.MaterialTextView>

    <CheckBox
        android:id="@+id/cBxCOD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="296dp"
        android:buttonTint="@color/main_color"
        android:padding="10dp"
        android:text="@string/cod"
        android:textColor="@color/main_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout17" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout17"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

        <AutoCompleteTextView
            android:id="@+id/txtLoaiVC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/LoaiVanChuyen"
            android:inputType="none"
            android:padding="10dp"
            android:textSize="13sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Confirm_Transport"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:text="@string/XacNhan"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:cornerRadius="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVTotal" />


</androidx.constraintlayout.widget.ConstraintLayout>