<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterAccountActivity"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="177dp">
    <!--    <ImageView-->
    <!--        android:id="@+id/imageView_Background"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:scaleType="centerCrop"-->
    <!--        android:src="@drawable/background_main"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DangKyTaiKhoan"
        android:textAllCaps="true"
        android:textColor="@color/main_color"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout11"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="clear_text"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCusName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/HoTen"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout12"

        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_edit_text"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout11">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCusNumberPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/SoDienThoai"
            android:inputType="text|number"
            android:maxLength="10"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout13"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rGroupUserGender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCusAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/DiaChi"
            android:inputType="textPostalAddress"
            android:maxLength="250"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rGroupUserGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout12">

        <RadioButton
            android:id="@+id/rBtnNam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main_color"
            android:padding="10dp"
            android:layout_marginEnd="20dp"
            android:text="Nam"
            android:textColor="@color/main_color"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rBtnNu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main_color"
            android:checked="true"
            android:padding="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/Nu"
            android:textColor="@color/main_color"
            android:textSize="14sp" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Confirm_Register"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/XacNhan"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:cornerRadius="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout10" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout14"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout13">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtUsername_R"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/TenTaiKhoan"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout15"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#5468CC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout14">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtUserPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/MatKhau"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout10"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout15"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#5468CC">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtreUserPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/NhapLaiMatKhau"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>